@@ -20,6 +20,10 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 * Bump MSRV to 1.70.0 ({pull-request-url}/37[#37])
 
+=== Removed
+
+* Remove links to the format specification ({pull-request-url}/38[#38])
+
 == {compare-url}/abcrypt-v0.1.0\...abcrypt-v0.2.0[0.2.0] - 2023-09-03
 
 === Added
